# packages/contract/openapi.json
@@ -336,6 +336,23 @@
               }
             ]
           }
+        },
+        "if": {
+          "required": [
+            "user_id"
+          ],
+          "properties": {
+            "user_id": {
+              "type": "string",
+              "minLength": 1
+            }
+          }
+        },
+        "then": {},
+        "else": {
+          "required": [
+            "user_email"
+          ]
         }
       },
       "FeedbackRecord": {
